just making it so every contianer is level and center, fixing the white space so there is no more scrolling needed initially

--- a/graph/static/graph/style.css
+++ b/graph/static/graph/style.css
@@ -63,8 +63,8 @@
             justify-content: space-around;
             width: 100%;
             max-width: 600px;
-            margin-bottom: 20px; 
-            margin-top: 200px;
+            margin-bottom: 18px; 
+            margin-top: 20px;
 	    flex-direction: column;
 
         }
@@ -85,7 +85,7 @@
             padding: 30px;
             text-align: center;
             background-color: #fff; 
-            border: 1px solid #333; 
+            border: 2px solid #333; 
             margin-bottom: 20px;
             box-sizing: border-box;
             display: flex;
@@ -121,7 +121,7 @@
     	   text-align: center;
     	   background-color: #fff; 
     	   border: 2px solid #333;
-    	   margin-top: 120px; 
+    	   margin-top: 85px; 
     	   margin-bottom: 20px; 
     	   align-self: center; 
 	   overflow-y: auto;
